--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: #6AB56E;
 }
@@ -5,18 +6,24 @@ body {
 table {
     margin-left:auto;
     margin-right:auto;
-    width: 600px;
+    width: 600p;
     background-color: #B4E7B7;
     vertical-align: middle;
     border: 1px solid
     
 }
 
-p {
+th {
+    border-bottom: 1px solid black;
+}
+
+/* p {
     color: white;
     text-align: center;
     font-size: 20px;
-}
+    bottom: 0;
+    margin: 0;
+} */
 
 h1 {
     color: white;
@@ -26,6 +33,7 @@ h1 {
 #tableH {
     color: black;
     font-size: 25px;
+    text-align: center;
 }
 
 img {
@@ -48,9 +56,16 @@ figcaption {
     text-align: center;
     font-size: 20px;
 }
-.lobster{
+*{
     font-family: "Lobster", sans-serif;
     font-weight: 400;
     font-style: normal;
   }
   
+h2 {
+    position: fixed;
+    left: 45%;
+    bottom: 42%;
+    margin: 0;
+    color: white;
+}
